# virtual-env-learning

./: README.md  instructions.txt  main.py  pyproject.toml  script.py
