[tool.poetry]
name = "virtual-env"
version = "0.1.0"
description = ""
authors = ["Sharizan <ijanzz5621@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arrow = "^1.3.0"

[tool.poetry.scripts]
runapp = 'virtual_env.script:main'

[tool.poetry.group.dev.dependencies]
pandas = "^2.1.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
